--- a/assets/style/css/header.css
+++ b/assets/style/css/header.css
@@ -1,51 +1,27 @@
 .header__container {
   position: fixed;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   width: 100%;
 }
 .header__container .header__container--top,
 .header__container .header__container--bot {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 .header__container .header__container--top .header__container--brandname,
 .header__container .header__container--bot .header__container--brandname {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 .header__container .header__container--top .header__container--brandname .brandname__top,
 .header__container .header__container--top .header__container--brandname .brandname__bot,
 .header__container .header__container--bot .header__container--brandname .brandname__top,
 .header__container .header__container--bot .header__container--brandname .brandname__bot {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
 }
 .header__container .header__container--top .header__container--brandname .brandname__top .brandname__top--joystick,
 .header__container .header__container--top .header__container--brandname .brandname__top .brandname__top--title,
@@ -69,29 +45,20 @@
 }
 .header__container .header__container--top .header__container--burger,
 .header__container .header__container--bot .header__container--burger {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  align-items: center;
   margin: 10px;
   margin-right: 12px;
 }
 .header__container .header__container--searchfield {
   width: 300px;
-  -webkit-transition: 100ms ease-in-out;
   transition: 100ms ease-in-out;
 }
 .header__container .header__container--searchfield .field-search {
   width: -webkit-fill-available;
   height: 30px;
   border-radius: 5px;
-  -webkit-transition: 300ms ease-in-out;
   transition: 300ms ease-in-out;
 }
 .header__container .header__container--zoom {
@@ -108,12 +75,8 @@
 
 @media screen and (min-width: 744px) {
   .header__container {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    flex-direction: row;
+    justify-content: space-around;
   }
   .header__container .header__container--top .header__container--burger {
     display: none;
@@ -129,7 +92,6 @@
     width: 270px;
     margin-top: auto;
     margin-bottom: auto;
-    -webkit-transition: 100ms ease-in-out;
     transition: 100ms ease-in-out;
   }
   .header__container .header__container--searchfield .field-search:focus-visible {
@@ -140,28 +102,14 @@
     margin-bottom: auto;
   }
   .header__container .header__container--menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-direction: row;
+    align-items: center;
   }
   .header__container .header__container--menu .menu__ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-direction: row;
+    align-items: center;
   }
   .header__container .header__container--menu .menu__ul .menu__icon img {
     width: 30px;
@@ -172,7 +120,6 @@
 @media screen and (min-width: 1280px) {
   .header__container--searchfield {
     width: 670px !important;
-    -webkit-transition: 100ms ease-in-out;
     transition: 100ms ease-in-out;
   }
-}/*# sourceMappingURL=header.css.map */
+}
