--- a/assets/style/css/logo.css
+++ b/assets/style/css/logo.css
@@ -1,21 +1,10 @@
 .footer__container--brandname {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  -webkit-box-ordinal-group: 4;
-      -ms-flex-order: 3;
-          order: 3;
+  order: 3;
 }
 .footer__container--brandname .brandname__copyright p {
   font-size: 12px;
@@ -32,4 +21,4 @@
     width: 30%;
     padding-top: 0px;
   }
-}/*# sourceMappingURL=logo.css.map */
+}
