--- a/assets/style/scss/global.scss
+++ b/assets/style/scss/global.scss
@@ -75,7 +75,10 @@ h4 {
     z-index: -3;
 }
 
-
+.underline {
+    cursor: pointer;
+    text-decoration: underline;
+}
 
 
 @media screen and (min-width:1280px) {
