--- a/components/view-1/view-1.scss
+++ b/components/view-1/view-1.scss
@@ -1,9 +1,6 @@
-/*
-------------------------------------
-First Part of CSS collection view 1
-------------------------------------
-*/ 
-.view1-items__container {
+// main container html node for view 1,2 and 3
+// START
+.myitems-items__container {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -13,22 +10,105 @@ First Part of CSS collection view 1
     height: fit-content;
     background-color: var(--clr__whiteFF-alpha);
 
+    .myitems-items__maintitle {
+        text-align: center;
+        margin: 20px;
+        font-size: 24px;
+        font-family: 'PTSans-Bold';
+    }
+
+    .myitems-items__last-items-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        width: 100%;
+
+        p {
+            color: $black;
+            font-weight: 400;
+        }
+    }
+}
+
+// END
+
+/*
+----------------
+ollection view 1
+----------------
+*/
+// Visible container part - START
+.view1-items__maincontainer {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    padding: 10px;
+    height: fit-content;
+    background-color: var(--clr__whiteFF-alpha);
+
     .view1-items__maintitle {
         text-align: center;
         margin: 20px;
         font-size: 24px;
         font-family: 'Inter';
     }
+
+    .view1-items__coverimage {
+        overflow: hidden;
+        border-radius: 5px;
+        width: 140px;
+        height: 140px;
+        text-align: center;
+        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.577);
+        transition: 500ms ease-in-out;
+        transform: rotate(0deg);
+
+        &>img {
+            width: 150px;
+            height: auto;
+            min-height: 150px;
+        }
+
+        &> :hover {
+            cursor: pointer;
+            transform: rotate(2deg);
+            transition: 500ms ease-in-out;
+        }
+    }
+
+    .view1-items__title {
+        text-align: left;
+    }
+
+    .view1-items__subtitle {
+        text-align: left;
+        font-family: 'Inter';
+        font-size: 14px;
+    }
+
+    .view1-items__plateform {
+        text-align: left;
+        font-family: 'Inter';
+        font-size: 14px;
+
+        &>img {
+            position: relative;
+            height: 21px;
+            top: -180px;
+            left: -20px;
+            padding: 3px 12px !important;
+            border: 1px solid $grey;
+            border-radius: 10px;
+            background-color: $white;
+        }
+    }
 }
 
-.view1-items__last-items-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    width: 100%;
-}
+// Visible container part - END
 
+// default hidden part - START
 .view1-items__last-items {
     display: flex;
     flex-direction: column;
@@ -38,63 +118,6 @@ First Part of CSS collection view 1
     width: 140px;
 }
 
-.view1-items__coverimage {
-    overflow: hidden;
-    border-radius: 5px;
-    width: 140px;
-    height: 140px;
-    text-align: center;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.577);
-    transition: 500ms ease-in-out;
-    transform: rotate(2deg);
-}
-
-.view1-items__coverimage:hover {
-    transform: rotate(0deg);
-    transition: 500ms ease-in-out;
-    cursor: pointer;
-}
-
-.view1-items__coverimage img {
-    width: 150px;
-    height: auto;
-    min-height: 150px;
-}
-
-.selected__item {
-    border: red 4px solid;
-}
-
-.view1-items__title {
-    text-align: left;
-}
-
-
-
-
-.view1-items__subtitle,
-.collection-items__subtitle {
-    text-align: left;
-    font-family: 'Inter';
-    font-size: 14px;
-}
-
-.view1-items__plateform {
-    text-align: left;
-    font-family: 'Inter';
-    font-size: 14px;
-
-    & > img {
-        position: relative;
-        height: 21px;
-        top: -180px;
-        left:-20px;
-        padding: 3px 12px !important;
-        border: 1px solid $grey;
-        border-radius: 10px;
-        background-color: $white;
-    }
-}
 
 .view1-items__footer-list {
     text-align: right;
@@ -162,14 +185,13 @@ First Part of CSS collection view 1
     flex-direction: row;
     justify-content: center;
     margin-top: 5px;
-}
 
-.view1-maxitem__coverimage img {
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.577);
-    max-width: 80%;
-    min-width: 80%;
+    &>img {
+        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.577);
+        max-width: 80%;
+        min-width: 80%;
+    }
 }
-
 
 .view1-maxitem__editor {
     margin-top: 5px;
@@ -190,19 +212,20 @@ First Part of CSS collection view 1
     margin-left: 10%;
     font-family: 'Inter';
     font-size: 12px;
+
+    .view1-maxitem__country {
+        color: var(--clr__grey6D);
+    }
+
+    .view1-maxitem__ref {
+        color: var(--clr__grey6D);
+    }
+
+    .view1-maxitem__support {
+        color: var(--clr__grey6D);
+    }
 }
 
-.view1-maxitem__country {
-    color: var(--clr__grey6D);
-}
-
-.view1-maxitem__ref {
-    color: var(--clr__grey6D);
-}
-
-.view1-maxitem__support {
-    color: var(--clr__grey6D);
-}
 
 .view1-maxitem__price {
     margin-top: 15px;
@@ -213,58 +236,249 @@ First Part of CSS collection view 1
     color: var(--clr__grey6D);
 }
 
-.note-informations.hidden,
-.bot-informations.hidden {
-    display: none;
-}
 
-.bit-items__subcontainer {
-    display: flex;
-    flex-direction: columns;
-    align-items: flex-start;
-}
 
-.note-informations {
+
+/*
+-----------------
+collection view 2
+-----------------
+*/
+
+
+.view2-item__maincontainer,
+.view3-item__maincontainer {
     display: flex;
+    flex-direction: column;
     justify-content: flex-start;
+    width: 100vw;
+    height: fit-content;
+    background-color: $white;
+    border-bottom: 1px solid $black;
+
+
+    .top-informations,
+    .bot-informations {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        width: 100vw;
+        height: fit-content;
+        background-color: aliceblue;
+
+        .select__bar {
+            display: flex;
+            justify-content: center;
+            width: 36px;
+            background-color: $black;
+
+            .checkbox {
+                cursor: pointer;
+                border-color: $golden;
+                width: 25px;
+                height: 25px;
+                margin-top: 10px;
+                margin-left: 4px;
+            }
+        }
+
+        .view2-items__coverimage,
+        .view3-items__coverimage {
+            display: flex;
+            justify-content: center;
+            overflow: hidden;
+            width: 140px;
+            height: 140px;
+            text-align: center;
+
+            &>img {
+                box-shadow: 5px 5px 5px var(--clr__grey6D);
+                width: 140px;
+                height: auto;
+                min-height: 140px;
+            }
+
+            &> :hover {
+                cursor: pointer;
+            }
+        }
+
+
+        .view2-basicinfos__container,
+        .view3-basicinfos__container {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding: 5px;
+
+
+            .view2-items__title,
+            .view3-items__title {
+                border-radius: 5px;
+                word-break: break-word;
+                font-size: 12px;
+                margin: 0 6px;
+                background-color: $whiteFF;
+                text-align: left;
+                font-family: 'PTSans-Bold';
+
+                h3 {
+                    margin-top: auto;
+                    margin-bottom: auto;
+                    padding: 5px;
+                    ;
+                }
+            }
+
+            .view2-items__subtitle,
+            .view3-items__subtitle {
+                text-align: left;
+                font-family: 'PTSans-Regular';
+                font-size: 14px;
+            }
+        }
+
+
+        .view2-basicinfos__subcontainer,
+        .view3-basicinfos__subcontainer {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+
+            &.view3 {
+                flex-direction: row;
+                justify-content: flex-start;
+                width: 100%;
+                padding: 5px;
+            }
+
+            .view2-items__subtitle,
+            .view3-items__subtitle,
+            .view2-items__editor,
+            .view3-items__editor,
+            .view2-items__year,
+            .view3-items__year,
+            .view2-items__plateform,
+            .view3-items__plateform {
+                padding: 2px;
+                margin-right: 5%;
+                font-size: 12px;
+                font-family: 'PTSans-Italic';
+            }
+        }
+
+        .view2-statesinfos__subcontainer,
+        .view3-statesinfos__subcontainer {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            width: 100%;
+            padding: 5px;
+
+            .view2-items__prices,
+            .view2-items__date,
+            .view2-items__state,
+            .view3-items__prices,
+            .view3-items__date,
+            .view3-items__state {
+                margin-bottom: 4px;
+
+                span {
+                    font-weight: 600;
+                }
+
+                ;
+
+            }
+
+            .view2-items__prices {
+                &>h4 {
+                    padding: 5px;
+                }
+
+                &>span {
+                    float: right;
+                }
+            }
+
+            .view2-items__date-state {
+                margin-top: 20px;
+                margin-bottom: 20px;
+            }
+
+            .view2-items__date-state {
+
+                &>p {
+                    margin: 5px;
+                    font-size: 12px;
+                    font-family: 'PTSans-Italic';
+                }
+            }
+
+            .view2-items__date-state {
+
+                &>h5 {
+                    margin: 5px;
+                    font-size: 12px;
+                    font-family: 'PTSans-Bold';
+                }
+            }
+        }
+
+
+
+        .bot-informations {
+            padding: 0px;
+        }
+
+        .arrow {
+            
+            position: absolute;
+            right: 0px;
+
+            &>img {
+                cursor: pointer;
+                width: 35px;
+                height: 25px;
+            }
+        }      
+    }
+
+    .view2-statesinfos__subcontainer {
+
+        .view2-items__notes:hover,
+        .edit-notes:hover {
+            cursor: pointer;
+        }
+
+        .view2-items__notes {
+            margin: 5px;
+        }
+    }
+
+    .note-informations {
+        display: flex;
+        justify-content: flex-start;
+
+        .form-notes {
+            text-align: center;
+
+
+            .input-notes {
+                border-radius: 5px;
+                border: solid 1px black;
+                padding: 5px;
+                width: 95%;
+            }
+        }
+    }
 }
 
-.input-notes {
-    /* width: 150%;
-    height: 120px; */
-    border-radius: 5px;
-    border: solid 1px black;
-    /* background-color: aliceblue; */
-    padding: 5px;
+
+.note-informations,
+.bot-informations {
+    &.hidden {
+        display: none;
+    }
 }
-
-
-
-
-
-.arrow img {
-    width: 35px;
-    height: 25px;
-}
-
-.collection-items__coverimage:hover {
-    cursor: pointer;
-}
-
-.collection-items__coverimage img {
-    box-shadow: 5px 5px 5px var(--clr__grey6D);
-    width: 100px;
-    height: auto;
-    min-height: 80px;
-}
-
-.collection-items__coverimage {
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
-    width: 80px;
-    height: 80px;
-    text-align: center;
-}
-
-
